--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -17,20 +17,11 @@ Primary use:	24/7 Express Logistics Services
 
 /* PLUGIN CSS */
 
-@import url('../plugins/bootstrap/css/bootstrap.css');                /* bootstrap */
-@import url('../plugins/yamm/yamm.css');                              /* responsive menu */
-@import url('../plugins/slider-pro/dist/css/slider-pro.css');         /* main slider */
-@import url('../plugins/owl-carousel/owl.carousel.css');              /* other sliders */
-@import url('../plugins/owl-carousel/owl.transitions.css');           /* other sliders */
-@import url('../plugins/owl-carousel/owl.theme.css');                 /* other sliders */
-@import url('../plugins/flexslider/flexslider.css');                  /* sliders */
-@import url('../plugins/prettyphoto/css/prettyPhoto.css');            /* modal */
-@import url('../plugins/bootstrap-select/dist/css/bootstrap-select.css');   /* select customization-2 */
-@import url('../plugins/animate/animate.css');                        /* animations */
-@import url('../plugins/parallax.css');                               /* parallax */
-@import url('../plugins/validation/validation-2.2.min.css');          /* validation */
-
-
+@import url('../plugins/bootstrap/css/bootstrap.css');
+@import url('../plugins/yamm/yamm.css');
+@import url('../plugins/slider-pro/dist/css/slider-pro.css');
+@import url('../plugins/animate/animate.css');
+@import url('../plugins/parallax.css');
 
 /* MAIN CSS */
 
@@ -41,3 +32,4 @@ Primary use:	24/7 Express Logistics Services
 @import url('blog.css');
 @import url('color.css');
 @import url('responsive.css');
+@import url('main.css');
