--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -2154,8 +2154,8 @@ p:last-child .typography-bg {
 .contacts-block__description {
 	margin-top: 21px;
 	margin-bottom: 39px;
-	font-family: 'Titillium Web';
-	font-weight: 400;
+	/*font-family: 'Titillium Web';
+	font-weight: 400;*/
 	line-height: 1.57;
 	color: #333;
 	text-transform: uppercase;
