--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,6 +35,9 @@ body {/*background-color: #A9F5F2;*/}
 .section-bg_mod-e {margin-bottom: 0px;}
 .block-contacts {margin-bottom: 70px;}
 
+.block-site-posts {display: flex; flex-wrap: wrap;}
+.block-site-posts .post {width: 46%; box-sizing: border-box; margin-bottom: 4%; margin-left: 2%; margin-right: 2%;}
+.post-detail .entry-media img {width: 100%;}
 
 @media (min-width:992px) and (max-width:1199px) {
 	.header__wrap {padding-left: 24px;}
@@ -98,6 +101,7 @@ body {/*background-color: #A9F5F2;*/}
 	.section-default {padding-top: 40px; padding-bottom: 40px;}
 
 	.block-services-wrap .block-services {width: 42%; margin: 2% 4%;}
+	.block-site-posts .post {width: 100%; margin-bottom: 50px; margin-left: 0%; margin-right: 0%;}
 }
 
 @media (max-width: 559px) {
